[tool.poetry]
name = "test_ray"
version = "0.1.0"
description = ""
authors = ["Luc Leonard"]

[tool.poetry.dependencies]
python = "3.8.7"
ray = {extras = ["rllib"], version = "^1.1.0"}
torch = "^1.7.1"
import = "^0.0.1"
gym = "^0.18.0"
gym-super-mario-bros = "^7.3.2"
aiohttp = "^3.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
